Readme update, Nuget is ready, And a rename

--- a/Salar.DpiAware/Salar.DpiAware.csproj
+++ b/Salar.DpiAware/Salar.DpiAware.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DpiForm.cs">
+    <Compile Include="HDpiForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
