--- a/Salar.DpiAware.nuspec
+++ b/Salar.DpiAware.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package >
 	<metadata>
-		<id>Salar.HDpiForm</id>
-		<version>1.0.0.0</version>
+		<id>Salar.DpiAware</id>
+		<version>1.1.0.0</version>
 		<title>HDpiForm - High DPI Per-Monitor Windows Forms</title>
 		<authors>emoacht, Salar Khalilzadeh</authors>
 		<owners>Salar Khalilzadeh</owners>
@@ -21,7 +21,7 @@
 		<dependencies></dependencies>
 	</metadata>
 	<files>
-		<file src="Salar.DpiAware\Bin\Release\*.dll" target="lib\net40" />
-		<file src="Salar.DpiAware\Bin\Release\*.xml" target="lib\net40" />
+		<file src="Salar.DpiAware\bin\Release\*.dll" target="lib\net40" />
+		<file src="Salar.DpiAware\bin\Release\*.xml" target="lib\net40" />
 	</files>
 </package>
